fixed some CSS issue like made my name bigger and made social icons look better on mobile

--- a/src/App.css
+++ b/src/App.css
@@ -39,11 +39,16 @@ header p{
 	border-top: solid 1px black;
 }
 
+.nom{
+	font-size: 1.5em;
+}
+
 
 .social  {
+	width: 100%;
 	text-align: center;
 	display: grid;
-	grid-template-columns: 1fr 1fr 1fr 1fr 1fr 1fr 1fr;
+	grid-template-columns: 1fr 1fr 1fr 1fr 1fr 1fr;
 	grid-gap: 4px;
 	margin-top: 20px;
 }
@@ -74,7 +79,7 @@ header p{
 	box-shadow:5px 5px 5px rgba(0,0,0,0.2); 
 	border: 1px solid rgba(220,220,220,1);
 	padding: 15px;
-	border-radius: 8px;
+	border-radius: 6px;
 }
 
 #skills .subsection{
@@ -157,7 +162,7 @@ footer{
 	.social  {
 		width: 20%;
 		display: grid;
-		grid-template-columns: 1fr 1fr 1fr 1fr 1fr 1fr 1fr;
+		grid-template-columns: 1fr 1fr 1fr 1fr 1fr 1fr;
 		grid-gap: 4px;
 	}
 
